@@ -1,5 +1,5 @@
 /*
- * $Id: ads1.c,v 1.106 2006/07/06 19:35:54 toninhofwi Exp $
+ * $Id: ads1.c,v 1.107 2006/07/25 09:06:38 druzus Exp $
  */
 
 /*
@@ -84,7 +84,7 @@ static RDDFUNCS adsSuper;
  * -- HELPER FUNCTIONS --
  */
 
-void adsSetListener_callback( HB_set_enum setting, HB_set_listener_enum when )
+static void adsSetListener_callback( HB_set_enum setting, HB_set_listener_enum when )
 {
    HB_TRACE(HB_TR_DEBUG, ("adsSetListener_callback (%d  %d)", setting, when));
    if( when == HB_SET_LISTENER_AFTER )  /* we don't do anything with BEFORE calls */
@@ -652,7 +652,7 @@ ERRCODE adsCloseCursor( ADSAREAP pArea )
  * -- ADS METHODS --
  */
 
-ERRCODE adsBof( ADSAREAP pArea, BOOL * pBof )
+static ERRCODE adsBof( ADSAREAP pArea, BOOL * pBof )
 {
    HB_TRACE(HB_TR_DEBUG, ("sixBof(%p, %p)", pArea, pBof));
 
@@ -665,7 +665,7 @@ ERRCODE adsBof( ADSAREAP pArea, BOOL * pBof )
    return SUCCESS;
 }
 
-ERRCODE adsEof( ADSAREAP pArea, BOOL * pEof )
+static ERRCODE adsEof( ADSAREAP pArea, BOOL * pEof )
 {
    HB_TRACE(HB_TR_DEBUG, ("adsEof(%p, %p)", pArea, pEof));
 
@@ -678,7 +678,7 @@ ERRCODE adsEof( ADSAREAP pArea, BOOL * pEof )
    return SUCCESS;
 }
 
-ERRCODE adsFound( ADSAREAP pArea, BOOL * pFound )
+static ERRCODE adsFound( ADSAREAP pArea, BOOL * pFound )
 {
    HB_TRACE(HB_TR_DEBUG, ("adsFound(%p, %p)", pArea, pFound));
 
@@ -952,7 +952,7 @@ static ERRCODE adsSeek( ADSAREAP pArea, BOOL bSoftSeek, PHB_ITEM pKey, BOOL bFin
 
       if( u16Found )
       {
-         /* remeber the record number for faster checking if we should update
+         /* remember the record number for faster checking if we should update
             fFound after SKIPFILTER */
          AdsGetRecordNum( pArea->hTable, ADS_IGNOREFILTERS, &u32RecNo );
       }
@@ -1068,10 +1068,10 @@ static ERRCODE adsSkip( ADSAREAP pArea, LONG lToSkip )
          pArea->fTop = pArea->fBottom = FALSE;
 
          /*
-          * This causes that skip id done on the server side but it
+          * This causes that skip is done on the server side but it
           * may cause bad side effect - in multiple skip ADS respects
           * only index keys and bitmap filter so it may skip differ
-          * number of records then we asked, [druzus]
+          * number of records than we asked, [druzus]
           */
          if( pArea->dbfi.itmCobExpr == NULL || pArea->dbfi.fOptimized )
          {
@@ -1116,7 +1116,7 @@ static ERRCODE adsSkip( ADSAREAP pArea, LONG lToSkip )
    }
 }
 
-ERRCODE adsSkipFilter( ADSAREAP pArea, LONG lUpDown )
+static ERRCODE adsSkipFilter( ADSAREAP pArea, LONG lUpDown )
 {
    BOOL fBottom;
    ERRCODE uiError;
@@ -1502,7 +1502,7 @@ static ERRCODE adsFieldCount( ADSAREAP pArea, USHORT * uiFields )
 
 #define  adsFieldDisplay          NULL
 
-ERRCODE adsFieldInfo( AREAP pArea, USHORT uiIndex, USHORT uiType, PHB_ITEM pItem )
+static ERRCODE adsFieldInfo( AREAP pArea, USHORT uiIndex, USHORT uiType, PHB_ITEM pItem )
 {
    LPFIELD pField;
 
