@@ -1,5 +1,5 @@
 /*
- * $Id: hbsxfunc.h,v 1.1 2005/09/15 12:55:35 druzus Exp $
+ * $Id: hbsxfunc.h,v 1.2 2005/10/18 12:14:32 druzus Exp $
  */
 
 /*
@@ -69,7 +69,7 @@ void hb_sxEnCrypt( BYTE * pSrc, BYTE * pDst, BYTE * pKeyVal, ULONG ulLen );
 void hb_sxDeCrypt( BYTE * pSrc, BYTE * pDst, BYTE * pKeyVal, ULONG ulLen );
 
 BOOL hb_LZSSxDecompressMem( BYTE * pSrcBuf, ULONG ulSrcLen, BYTE * pDstBuf, ULONG ulDstLen );
-BOOL hb_LZSSxDecompressMem( BYTE * pSrcBuf, ULONG ulSrcLen, BYTE * pDstBuf, ULONG ulDstLen );
+BOOL hb_LZSSxCompressMem( BYTE * pSrcBuf, ULONG ulSrcLen, BYTE * pDstBuf, ULONG ulDstLen, ULONG * pulSize );
 BOOL hb_LZSSxCompressFile( FHANDLE hInput, FHANDLE hOutput, ULONG * pulSize );
 BOOL hb_LZSSxDecompressFile( FHANDLE hInput, FHANDLE hOutput );
 
