@@ -1,5 +1,5 @@
 /*
- * $Id: harbour.c,v 1.135 2006/07/09 18:11:31 ronpinkas Exp $
+ * $Id: harbour.c,v 1.136 2006/07/16 19:48:56 druzus Exp $
  */
 
 /*
@@ -132,7 +132,6 @@ static PINLINE hb_compInlineNew( char * );  /* creates and initialises the _INLI
 static void hb_compCheckDuplVars( PVAR pVars, char * szVarName ); /*checks for duplicate variables definitions */
 static int hb_compProcessRSPFile( char *, int, char * argv[] ); /* process response file */
 
-/* int hb_compSort_ULONG( ULONG * ulLeft, ULONG * ulRight ); */
 static void hb_compOptimizeJumps( void );
 static void hb_compOptimizeFrames( PFUNCTION pFunc );
 
@@ -4499,11 +4498,7 @@ static void hb_compOptimizeFrames( PFUNCTION pFunc )
    }
 }
 
-int
-#ifdef __IBMCPP__
-extern _LNK_CONV
-#endif
-hb_compSort_ULONG( const void * pLeft, const void * pRight )
+static int hb_compSort_ULONG( const void * pLeft, const void * pRight )
 {
     ULONG ulLeft  = *( ( ULONG * ) ( pLeft ) );
     ULONG ulRight = *( ( ULONG * ) ( pRight ) );
